<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/face_main_color"
    android:fitsSystemWindows="true"
    android:paddingTop="6dp"
    tools:context="com.faceAI.demo.FaceAINaviActivity">

    <ImageView
        android:id="@+id/system_info"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/info_icon_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:src="@drawable/share" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/share_faceai_sdk"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/face_sdk_navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/bg_rect_line"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/camera_type_select"
                android:textColor="@color/half_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/camera_type_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/camera_type_background"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/camera_type_system"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/face_verify"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_rect_line"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:padding="1dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/face_verify"
                app:lottie_speed="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/face_verify_1vs1"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/face_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/bg_rect_line"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="40dp"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="11dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/face_search" />

            <TextView
                android:id="@+id/change_base_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/face_search"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/face_search" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/liveness_detection"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/bg_rect_line"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="13dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/add_face"
                app:lottie_speed="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/liveness_detection"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/params_setting"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_line"
        android:gravity="center"
        android:text="@string/parameter_setting"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/two_face_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/two_face_verify"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_line"
        android:gravity="center"
        android:text="@string/two_face_image_verify"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/custom_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/custom_camera"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_rect_line"
        android:gravity="center"
        android:text="@string/custom_camera"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/more_about_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/more_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/about_us"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>