<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/face_main_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:subtitleTextColor="#FFF"
        app:title="@string/face_verify_1vs1"
        app:titleTextColor="#FFF"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDB48D"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/face_verify_demo"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/camera_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="7dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/button_rounded_background"
                android:text="@string/camera_type_system"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/add_face_from_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/from_camera" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_face_from_camera"
                        android:textStyle="bold"
                        android:textColor="@color/face_main_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_face_from_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/from_photo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_face_from_photo"
                        android:textStyle="bold"
                        android:textColor="@color/face_main_color"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/half_blue_sky"
                android:layout_marginTop="7dp"
                android:scrollbarSize="3dp"
                android:paddingTop="7dp"
                android:paddingBottom="3dp"
                android:scrollbarThumbVertical="@color/green"
                android:scrollbars="horizontal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>