<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/dialog_rounded_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/preview"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:padding="7dp"
                android:layout_width="135dp"
                android:layout_height="135dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:padding="7dp"
                android:text="@string/confirm_add_face_tips"
                android:textStyle="bold"
                android:textColor="@color/face_main_color"
                android:textSize="13sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:layout_marginTop="9dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/share_face_image"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded_background"
                    android:text="@string/share_face_image"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/share_face_feature"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/button_rounded_background"
                    android:text="@string/share_face_feature"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>